examples/BAD/BAD_045_CONSISTENCY_2/main.nut
Data Address :=
    - string: type
    - string: name
    - uint32: number

Data house :=
    - Address: address
    - string: family_name

@ {}
